debug: overflow issue

--- a/src/global.css
+++ b/src/global.css
@@ -13,13 +13,16 @@
   src: url('/fonts/Unibody.otf') format('opentype');
 }
 
-body {
+body,
+html {
+  height: 100%;
+  width: 100%;
   overscroll-behavior: none;
 }
 
-html,
-body {
-  height: 100vh;
+#root {
+  height: 100%;
+  width: 100%;
 }
 
 /* For webkit-based browsers (e.g., Chrome, Safari) */
